--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.13",
+    "expo-cli": "^6.3.10",
+    "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-web": "~0.19.6",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "expo-updates": "~0.18.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
